foundation-objs/main/default/objects/Product2/fields/Constraint_JSON__c.field-meta.xml
<CustomField>
    <fullName>Constraint_JSON__c</fullName>
    <label>Constraint JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>