foundation-objs/main/default/objects/Product2/fields/CSM_Handled_Product__c.field-meta.xml
<CustomField>
    <fullName>CSM_Handled_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSM Handled Product?</label>
    <type>Checkbox</type>
</CustomField>