foundation-objs/main/default/objects/Product2/fields/Is_Applicable_for_Licensing__c.field-meta.xml
<CustomField>
    <fullName>Is_Applicable_for_Licensing__c</fullName>
    <formula>IF( Plan_Tier__c != NULL, true, false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Applicable for Licensing?</label>
    <type>Checkbox</type>
</CustomField>