foundation-objs/main/default/objects/Product2/fields/Is_Custom_Plans_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Is_Custom_Plans_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Custom Plans Allowed?</label>
    <type>Checkbox</type>
</CustomField>