foundation-objs/main/default/objects/Product2/fields/Is_Standard__c.field-meta.xml
<CustomField>
    <fullName>Is_Standard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Standard?</label>
    <type>Checkbox</type>
</CustomField>