foundation-objs/main/default/objects/Product2/fields/Module_for_Type_of_Integration_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Module_for_Type_of_Integration_Threshold__c</fullName>
    <label>Module for Type of Integration Threshold</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GST</fullName>
            </value>
            <value>
                <fullName>EINV</fullName>
            </value>
            <value>
                <fullName>EWB</fullName>
            </value>
            <value>
                <fullName>Max</fullName>
            </value>
            <value>
                <fullName>TDS</fullName>
            </value>
            <value>
                <fullName>ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>