foundation-objs/main/default/objects/Product2/fields/Plan_Allowance_IRN__c.field-meta.xml
<CustomField>
    <fullName>Plan_Allowance_IRN__c</fullName>
    <label>Plan Allowance IRN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>