foundation-objs/main/default/objects/Product2/fields/Plan_Allowance_Total_invoices__c.field-meta.xml
<CustomField>
    <fullName>Plan_Allowance_Total_Invoices__c</fullName>
    <label>Plan Allowance Total Invoices</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>