foundation-objs/main/default/objects/Product2/fields/Plan_Tier__c.field-meta.xml
<CustomField>
    <fullName>Plan_Tier__c</fullName>
    <label>Plan Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>