foundation-objs/main/default/objects/Product2/fields/Plan_Topup_Threshold_GSTIN__c.field-meta.xml
<CustomField>
    <fullName>Plan_Topup_Threshold_GSTIN__c</fullName>
    <label>Plan Topup Threshold GSTIN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>