foundation-objs/main/default/objects/Product2/fields/Product_Plan_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Plan_Id__c</fullName>
    <externalId>true</externalId>
    <label>Product Plan Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>