foundation-objs/main/default/objects/Product2/fields/SaaS_Product__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Product__c</fullName>
    <label>SaaS Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GST</fullName>
            </value>
            <value>
                <fullName>CLEARTAX</fullName>
            </value>
            <value>
                <fullName>E_INVOICING</fullName>
            </value>
            <value>
                <fullName>CLEARONE</fullName>
            </value>
            <value>
                <fullName>CLEAR_INVOICE</fullName>
            </value>
            <value>
                <fullName>InvoiceCapture</fullName>
            </value>
            <value>
                <fullName>CLEAR_IDENTITY</fullName>
            </value>
            <value>
                <fullName>MaxItc</fullName>
            </value>
            <value>
                <fullName>TAX_ENGINE</fullName>
            </value>
            <value>
                <fullName>TDS</fullName>
            </value>
            <value>
                <fullName>CLEAR_PRO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>